<resources>
    <string name="app_name">Watch Me</string>
    <string name="search_title">Search</string>
    <string name="add_title">Add</string>
    <string name="my_shows">My Shows</string>
    <string name="search_for">Search for new show…</string>
    <string name="add_new">Add new show …</string>
    <string name="year">Year: </string>
    <string name="rating">Rating: </string>
    <string name="unfinished_episodes">Unfinished:</string>
    <string name="finished_episodes">Finished:</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="first_time_use">You don\'t have anything in MyShows, please add a new TV Show.</string>
    <string name="nothing_found">Sorry we couldn\'t find anything under that name.</string>
    <string name="search_refreshing">Refreshing</string>
    <string name="add_series">Add</string>
    <string name="season_name">Season</string>
    <string name="total_episodes">Total episodes:</string>
    <string name="special_season">Specials</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="sort_rating">Sort by Rating</string>
    <string name="sort_unfinished">Sort by Unfinished</string>
    <string name="sort_year">Sort by Year</string>
    <string name="seasons">Seasons</string>
    <string name="search_query">we found the following</string>
    <string name="done_series">all done.</string>
    <string name="one_more_episode">one new episode.</string>
    <string name="left_episodes">new episodes.</string>
    <string name="my_shows_sub_title">your favorite shows</string>
    <string name="refreshing">…getting new episodes</string>
    <string name="set_all_finished">Set all finished</string>
    <string name="settings">Settings</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="refresh">Refresh</string>
</resources>
